--- a/views/sanphams/create.pug
+++ b/views/sanphams/create.pug
@@ -1,1 +1,5 @@
 h1 tạo mới 1 sản phẩm
+form(action="/sanphams/create",  method="POST")
+    input(type="text", name="name")
+    input(type="text", name="price")
+    button Tạo mới
